<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="views.fragment.autenticazione.LoginFragment"
    android:background="@color/backgroundWhite"
    >

    <TextView
        android:id="@+id/textViewTitoloLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/app_name"
        android:textSize="@dimen/headerTextSize"
        app:layout_constraintBottom_toTopOf="@id/cardViewDataLogin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewDataLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textViewTitoloLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintBottom_toTopOf="@id/linearLayoutButtonsLogin"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        >


        <LinearLayout
            android:id="@+id/linearLayoutLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="16dp"
            android:paddingHorizontal="16dp"
            android:paddingVertical="30dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <TextView
                android:id="@+id/textViewSubTitoloLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/formDiLogin"
                android:textSize="@dimen/subHeaderTextSize"
                app:layout_constraintBottom_toTopOf="@id/cardViewDataLogin"
                app:layout_constraintTop_toBottomOf="@+id/textViewTitoloLogin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                />

            <!-- TextInputLayout e TextInputEditText per username -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailFragmentLogin"
                    style="@style/TextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- TextInputLayout e TextInputEditText per password -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordFragmentLogin"
                    style="@style/TextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/login" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


    <LinearLayout
        android:id="@+id/linearLayoutButtonsLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardViewDataLogin">

        <Button
            android:id="@+id/buttonRapidAccess"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:text="@string/rapidAccess" />

        <Button
            android:id="@+id/buttonRegistration"
            style="@style/TrasparentButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/notRegistered"
            android:textAllCaps="false" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
