<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="16dp"
    >

    <LinearLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/llLayoutPopUp"
        android:orientation="vertical"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/constraintLayoutPopUpInfo"
            android:background="@color/white"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewTitoloPopUp"
                android:background="@color/white"
                android:text="@string/title"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="center"
                android:textSize="18sp"
                android:padding="10dp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/textViewTitoloPopUp"
                android:background="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/textViewTitoloPopUp"/>

            <TextView
                android:id="@+id/textViewDescrizionePopUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descrizionePopUp"
                android:gravity="center_horizontal"
                android:textSize="15sp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewTitoloPopUp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/linearLayoutPopUpBottoni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/constraintLayoutPopUpInfo"
            >

            <android.widget.Button
                android:id="@+id/buttonConfermaPopUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:background="@color/colorPrimary"
                android:visibility="gone"
                />

            <android.widget.Button
                android:id="@+id/buttonAnnullaPopUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/annulla"
                android:textColor="@color/primaryTextColor"
                android:background="@color/black"
                android:visibility="gone"
                />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>