<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="views.fragment.autenticazione.RegistrazioneFragment"
    android:background="@color/backgroundWhite"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/textViewTitoloRegistrazione"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/app_name"
            android:textSize="27dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolBar"
            />

        <androidx.appcompat.widget.Toolbar
            android:id="@id/toolBar"
            style="@style/styleToolBar"
            tools:ignore="MissingConstraints"
            app:layout_constraintBottom_toTopOf="@+id/textViewTitoloRegistrazione"
            />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardViewDataRegistrazione"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="15dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/linearLayoutButtonsRegistrazione"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewTitoloRegistrazione"
            app:cardBackgroundColor="@color/cardview_light_background"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:layout_marginTop="20dp"
            >

            <LinearLayout
                android:id="@+id/linearLayoutRegistrazione"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="40dp"
                android:gravity="center_horizontal"
                >

                <TextView
                    android:id="@+id/textViewSubTitoloBenvenuti"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/registrazione"
                    android:textSize="20dp"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="20dp"
                    app:layout_constraintBottom_toTopOf="@id/cardViewDataRegistrazione"
                    app:layout_constraintTop_toBottomOf="@id/textViewTitoloRegistrazione"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <!-- TextInputLayout e TextInputEditText per Nome -->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nameFragmentRegistration"
                        style="@style/TextInputEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nome"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- TextInputLayout e TextInputEditText per Cognome -->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/surnameFragmentRegistration"
                        style="@style/TextInputEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cognome"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- TextInputLayout e TextInputEditText per Email -->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailFragmentRegistration"
                        style="@style/TextInputEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_hint"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- TextInputLayout e TextInputEditText per Username -->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/usernameFragmentRegistration"
                        style="@style/TextInputEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username_hint"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- TextInputLayout e TextInputEditText per Telefono -->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phoneFragmentRegistration"
                        style="@style/TextInputEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_hint"
                        android:inputType="phone" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- TextInputLayout e TextInputEditText per Indirizzo -->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addressFragmentRegistration"
                        style="@style/TextInputEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address_hint"
                        android:inputType="textPostalAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- TextInputLayout e TextInputEditText per Password -->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordFragmentRegistration"
                        style="@style/TextInputEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- TextInputLayout e TextInputEditText per Conferma Password -->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/confirmPasswordFragmentRegistration"
                        style="@style/TextInputEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password_hint"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/buttonRegister"
                    android:layout_width="296dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/registrazione" />

                <Button
                    android:id="@+id/buttonGoToLogin"
                    style="@style/TrasparentButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_registered"
                    android:textAllCaps="false"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/linearLayoutButtonsRegistrazione"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardViewDataRegistrazione">

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>